--- a/lab_4.ipynb
+++ b/lab_4.ipynb
@@ -4967,6 +4967,29 @@
     {
       "cell_type": "markdown",
       "source": [
+        " **Тренировочная и валидационная точность:**\n",
+        "* Модель демонстрирует высокую тренировочную точность, достигая около 0.85.\n",
+        "* Валидационная точность также показывает стабильный рост, достигая около 0.73.\n",
+        "\n",
+        "**Тренировочные и валидационные потери:**\n",
+        "* Тренировочные потери уверенно снижаются до 0.39.\n",
+        "* Валидационные потери имеют достаточно высокое знаяение, достигая 0.92.\n",
+        "\n",
+        "**Итоговые значения:**\n",
+        "* Потери: 0.81\n",
+        "* Точность: 0.73\n",
+        "\n",
+        "В целом, результаты обучения модели показывают отличные показатели на тренировочной, но на валидационной выборках значения хуже.\n",
+        "\n",
+        "Высокая точность и низкие потери на тренировочном наборе свидетельствуют о том, что модель успешно обучается, но, глядя на валидационные и тестовые выборки, можно сказать, что модель можно улучшать."
+      ],
+      "metadata": {
+        "id": "oqfHeM0dDekE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Фунция построения графиков значений Loss и Accuracy"
       ],
       "metadata": {
@@ -5104,6 +5127,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Для текущей задачи лучше подходит сверточный автокодировщик, потому что он эффективно обрабатывает изображения, извлекая пространственные и цветовые признаки, важные для распознавания цветов, таких как тюльпаны или розы. Сверточные слои хорошо подходят для анализа текстур, форм и цветовых оттенков, сохраняя локальные зависимости в данных.\n",
+        "\n",
+        "В отличие от обычных автокодировщиков с полносвязными слоями, сверточный автокодировщик значительно снижает количество параметров, что делает его более вычислительно эффективным и позволяет работать с большими изображениями без потери пространственной структуры."
+      ],
+      "metadata": {
+        "id": "8v4tv4_REpCW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "convencoder = tf.keras.models.Sequential([\n",
@@ -5187,6 +5221,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Модель:**\n",
+        "Автокодировщик, состоящий из сверточного энкодера и декодера.\n",
+        "\n",
+        "**Энкодер:**<br>\n",
+        "Четыре последовательных слоя Conv2D с шагом 2 и активацией SELU. Каждый слой увеличивает количество фильтров (16 → 32 → 64 ), сжимая входное изображение размером (64, 64, 3) до латентного представления размером (8, 8, 64).\n",
+        "\n",
+        "**Декодер:**<br>\n",
+        "Четыре слоя Conv2DTranspose с шагом 2 и активацией SELU. Декодер восстанавливает исходные размеры изображения, постепенно уменьшая количество фильтров (64 → 32 → 16). Последний слой Conv2D с активацией sigmoid выдает восстановленное изображение размером (64, 64, 3).\n",
+        "\n",
+        "**Тренировка:**<br>\n",
+        "Обучение выполняется на нормализованных данных (пиксели от 0 до 1) с использованием функции потерь binary_crossentropy и оптимизатора Adam. Модель обучается на обучающем наборе с валидацией на проверочном.\n",
+        "Процесс ограничен максимум 100 эпохами с досрочной остановкой, если метрика валидации перестает улучшаться."
+      ],
+      "metadata": {
+        "id": "9IZ6ln7EEttx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "callbacks = [\n",
@@ -5259,6 +5313,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Тренировочная и валидационная точность**<br>\n",
+        "* Тренировочная точность: График показывает одинаковую точность, равную 0.78 на тренировочной выборке мере увеличения количества эпох. Это свидетельствует о том, что модель эффективно обучается на своих данных.\n",
+        "* Валидационная точность: Валидационная точность также увеличивается, достигая примерно 0.81. Это указывает на то, что модель сохраняет свою способность хорошо обобщать на новых данных.\n",
+        "\n",
+        "**Тренировочные и валидационные потери**<br>\n",
+        "* Тренировочные потери: одинаково распространяются на протяжении все эпох - 0.49 - 0.5\n",
+        "* Валидационные потери: Валидационные потери также примерно одинаковы - 0.49 - 0.5\n"
+      ],
+      "metadata": {
+        "id": "B5QAjHMpFLwD"
+      }
     },
     {
       "cell_type": "code",
@@ -5796,6 +5865,59 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "На графиках отображены метрики обучения и валидации сверточной классификационной модели, построенной на основе предварительно обученного автокодировщика.\n",
+        "\n",
+        "Точность на тренировочной выборке растет с мало заметными перепадами, что указывает о хорошей обучающей способности, а также о возможных улучшениях модели. Валидационная точность демонстрирует скачки с небольшим снижением.\n",
+        "\n",
+        "Потери на тренировочной выборке показывают значительное снижение, что свидетельствует о сокращении ошибок модели. Валидационные потери также уменьшаются, хотя и колеблются, что может указывать на потенциальные области для дальнейшей настройки модели.\n",
+        "\n",
+        "В целом, модель показывает позитивные результаты и эффективно справляется с задачей классификации на обоих наборах данных."
+      ],
+      "metadata": {
+        "id": "s7pwuFWf48xZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3. Анализ показателей"
+      ],
+      "metadata": {
+        "id": "gwDJVkm66Icx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "|           | Convolutional | Dense  |\n",
+        "|:---------:|:-------------:|:------:|\n",
+        "| Weight    |      355K     |  688K  |\n",
+        "| Train acc |      0.67     |  0.85  |\n",
+        "| Val Acc   |      0.66     |  0.73  |\n",
+        "| Test Acc  |      0.62     |  0.73  |"
+      ],
+      "metadata": {
+        "id": "3Fd7Ug0T6NFw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Анализ показателей сверточной и полносвязной модели, построенной на основе предварительно обученного автокодировщика, демонстрирует:\n",
+        "\n",
+        "Сверточная модель имеет меньшее количество весов и показывает высокую точность на тренировочной и валидационной выборках, с меньшими потерями. Это свидетельствует о её эффективности и способности хорошо обобщать на новых данных.\n",
+        "\n",
+        "Полносвязная модель имеет большее количество весов и показывает более низкие значения точности и более высокие потери на всех выборках. Это может указывать на необходимость дальнейшей настройки и улучшения модели для достижения лучших результатов.\n",
+        "\n",
+        "В целом, сверточная модель показывает лучшие результаты по сравнению с полносвязнай моделью, что делает её предпочтительным выбором для задачи классификации изображений."
+      ],
+      "metadata": {
+        "id": "GHIAEsMbC44X"
+      }
     }
   ]
 }
