--- a/lab_5.ipynb
+++ b/lab_5.ipynb
@@ -98,10 +98,10 @@
       ],
       "metadata": {
         "id": "6Sc2JO7PI6Uh",
-        "outputId": "21f76fab-bbb7-43c7-d3ab-fed9b9f49c01",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "21f76fab-bbb7-43c7-d3ab-fed9b9f49c01"
       },
       "execution_count": 2,
       "outputs": [
@@ -304,6 +304,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- `Точность`: Точность на обучающей выборке стабильно растет без резких перепадов, на валидационной на протяежниии 6-8 эпо стабильна, после наблюдается снижение. Это означает, что модель можно совершенстовать, добавлять регуляризацию в виде l1, l2, dropout. Вероятной причиной результата, является небольшое количество эпох, из-за чего модель недостаточно хорошо обновила веса\n",
+        "\n",
+        "- `Потери`: Потери на обучающей выборки заметно снижаются, что говорит о хорошем качетсве обучения, однако, на валидационной выборке потери сильно растут вверх, что также свидельствует о необходимости дальнейшего совершенствования"
+      ],
+      "metadata": {
+        "id": "B4p3ezkLTDVT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "best_model_lstm = tf.keras.models.load_model(\"lstm_model.keras\")"
@@ -434,6 +445,54 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- `Обучающая выборка`:\n",
+        "\n",
+        "  - `f1_score`: 0.9037\n",
+        "  \n",
+        "  Очень высокий показатель, что говорит о хорошем обучении, но также возможно о переобучении.\n",
+        "  - `Классы`:\n",
+        "    - `Negative`:\n",
+        "      - `Precision`: 0.98 — почти все прогнозы для класса \"Negative\" точны.\n",
+        "      - `Recall`: 0.81 — часть объектов класса \"Negative\" не была правильно распознана.\n",
+        "      - `F1 Score`: 0.89 — высокий результат.\n",
+        "\n",
+        "    - `Positive`:\n",
+        "      - `Precision`: 0.84 — ниже, чем для \"Negative\".\n",
+        "      - `Recall`: 0.98 — почти все объекты класса \"Positive\" распознаны правильно.\n",
+        "      - `F1 Score`: 0.90 — немного выше, чем для \"Negative\".\n",
+        "\n",
+        "    - *Анализ*:\n",
+        "      - На обучающей выборке модель демонстрирует высокую точность и полноту. Однако больший recall для \"Positive\" и меньший для \"Negative\" показывают, что модель лучше фокусируется на \"Positive\".\n",
+        "\n",
+        "- `Валидационная выборка`:\n",
+        "  - `f1_score`: 0.8149\n",
+        "\n",
+        "  Это хороший показатель, но он ниже, чем на обучающей выборке. Это говорит о том, что модель немного переобучена или тестовая выборка сложнее.\n",
+        "  - `Классы`:\n",
+        "      - `Negative`:\n",
+        "        - `Precision` (точность): 0.89 — из всех прогнозов, которые модель отнесла к классу \"Negative\", 89% верны.\n",
+        "        - `Recall` (полнота): 0.66 — из всех объектов класса \"Negative\" модель правильно классифицировала только 66%.\n",
+        "        - `F1 Score`: 0.76 — гармоническое среднее precision и recall. Это ниже, чем для класса \"Positive\".\n",
+        "      - `Positive`:\n",
+        "        - `Precision`: 0.73 — из всех прогнозов \"Positive\", 73% верны.\n",
+        "        - `Recall`: 0.92 — из всех объектов класса \"Positive\", 92% правильно классифицированы.\n",
+        "        - `F1 Score`: 0.81 — лучше, чем для класса \"Negative\".\n",
+        "\n",
+        "      - *Анализ*:\n",
+        "        - Модель склонна лучше определять класс \"Positive\" (высокий recall), но при этом делает больше ошибок, относя примеры из класса \"Negative\" к \"Positive\".\n",
+        "        - Возможно, в данных есть перекос (imbalance) в распределении классов или модель недостаточно хорошо различает эти классы.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZAfUwuR_VTy8"
+      }
     },
     {
       "cell_type": "markdown",
@@ -787,11 +846,11 @@
       ],
       "metadata": {
         "id": "gk5pdlmoelFb",
-        "outputId": "d77f49cf-1864-489b-cb90-7f7e44c933f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 887
-        }
+        },
+        "outputId": "d77f49cf-1864-489b-cb90-7f7e44c933f8"
       },
       "execution_count": 10,
       "outputs": [
@@ -836,11 +895,11 @@
         "print(f\"Accuracy: {accuracy:.3f}\")\n"
       ],
       "metadata": {
-        "id": "ezIHmoDgAwry",
-        "outputId": "3190e74d-bd95-4c9e-e184-c04533f32d7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ezIHmoDgAwry",
+        "outputId": "3190e74d-bd95-4c9e-e184-c04533f32d7b"
       },
       "execution_count": 14,
       "outputs": [
@@ -888,11 +947,11 @@
         "full_model.summary()\n"
       ],
       "metadata": {
-        "id": "9QtY54b7BUpe",
-        "outputId": "dff0386d-af6a-4958-bd76-9c8dc0bb669d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9QtY54b7BUpe",
+        "outputId": "dff0386d-af6a-4958-bd76-9c8dc0bb669d"
       },
       "execution_count": 15,
       "outputs": [
@@ -970,11 +1029,11 @@
         ")"
       ],
       "metadata": {
-        "id": "s2e-rcpUBHiz",
-        "outputId": "751baa29-d887-4606-dc49-a62448b81518",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s2e-rcpUBHiz",
+        "outputId": "751baa29-d887-4606-dc49-a62448b81518"
       },
       "execution_count": 17,
       "outputs": [
@@ -1039,12 +1098,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "DEZD-Ou5MgCb",
-        "outputId": "968ca092-6bb9-4252-aafb-7faf07fc2719",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 887
-        }
+        },
+        "id": "DEZD-Ou5MgCb",
+        "outputId": "968ca092-6bb9-4252-aafb-7faf07fc2719"
       },
       "execution_count": 19,
       "outputs": [
@@ -1071,6 +1130,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "`Точность`: На обучающей выборке видна положительная динамика роста, что говорит о хорошем обучении модели, однако на валидационном наборе точность ниже, что указывает на недостаточное хорошую структуру модели или на слишком маленькое количество эпох\n",
+        "\n",
+        "`Потери`: На обучающей выборке"
+      ],
+      "metadata": {
+        "id": "Ds7k4aENXu89"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -1086,11 +1156,11 @@
         "print(report)\n"
       ],
       "metadata": {
-        "id": "g942VrNJKk7_",
-        "outputId": "4db01491-fbd4-4f9e-9086-f2c3d8fe7ce8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g942VrNJKk7_",
+        "outputId": "4db01491-fbd4-4f9e-9086-f2c3d8fe7ce8"
       },
       "execution_count": 20,
       "outputs": [
@@ -1170,11 +1240,11 @@
         "print(report)"
       ],
       "metadata": {
-        "id": "73tQS4NzLAOS",
-        "outputId": "3a02f2df-ffca-4774-8b97-a39a71780a0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "73tQS4NzLAOS",
+        "outputId": "3a02f2df-ffca-4774-8b97-a39a71780a0a"
       },
       "execution_count": 27,
       "outputs": [
