--- a/lab_5.ipynb
+++ b/lab_5.ipynb
@@ -1134,7 +1134,7 @@
       "source": [
         "`Точность`: На обучающей выборке видна положительная динамика роста, что говорит о хорошем обучении модели, однако на валидационном наборе точность ниже, что указывает на недостаточное хорошую структуру модели или на слишком маленькое количество эпох\n",
         "\n",
-        "`Потери`: На обучающей выборке"
+        "`Потери`: На обучающей выборке ошибка заметно снижается, что говорит о хорошей адаптивности моедели к тестовым данным, но на валидационном наборе данных потери растут достаточно сильно - плохая структура модели или ограничнное количество эпох"
       ],
       "metadata": {
         "id": "Ds7k4aENXu89"
@@ -1197,6 +1197,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Результат классификационного отчет плохой, ниже представлен полный отчет для всех 3 наборов данных"
+      ],
+      "metadata": {
+        "id": "lBNAkD7sYd1B"
+      }
     },
     {
       "cell_type": "code",
@@ -1316,6 +1325,209 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Анализ результатов классификации\n",
+        "\n",
+        "## 1. Тестовая выборка\n",
+        "- **F1 Score (общая):** `0.8421`\n",
+        "- **Классы:**\n",
+        "  - **Negative:**\n",
+        "    - Precision: `0.83`\n",
+        "    - Recall: `0.87`\n",
+        "    - F1 Score: `0.85`\n",
+        "  - **Positive:**\n",
+        "    - Precision: `0.86`\n",
+        "    - Recall: `0.82`\n",
+        "    - F1 Score: `0.84`\n",
+        "- **Accuracy:** `85%`\n",
+        "\n",
+        "### Анализ:\n",
+        "- Модель демонстрирует сбалансированное поведение для обоих классов.\n",
+        "- Precision и Recall близки, что указывает на устойчивость классификации.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 2. Валидационная выборка\n",
+        "- **F1 Score (общая):** `0.8598`\n",
+        "- **Классы:**\n",
+        "  - **Negative:**\n",
+        "    - Precision: `0.86`\n",
+        "    - Recall: `0.86`\n",
+        "    - F1 Score: `0.86`\n",
+        "  - **Positive:**\n",
+        "    - Precision: `0.86`\n",
+        "    - Recall: `0.86`\n",
+        "    - F1 Score: `0.86`\n",
+        "- **Accuracy:** `86%`\n",
+        "\n",
+        "### Анализ:\n",
+        "- Результаты на валидационной выборке выше, чем на тестовой, что говорит о хорошей обобщающей способности модели.\n",
+        "- Метрики для классов полностью симметричны, что свидетельствует о равномерной классификации.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 3. Обучающая выборка\n",
+        "- **F1 Score (общая):** `0.9376`\n",
+        "- **Классы:**\n",
+        "  - **Negative:**\n",
+        "    - Precision: `0.93`\n",
+        "    - Recall: `0.95`\n",
+        "    - F1 Score: `0.94`\n",
+        "  - **Positive:**\n",
+        "    - Precision: `0.95`\n",
+        "    - Recall: `0.93`\n",
+        "    - F1 Score: `0.94`\n",
+        "- **Accuracy:** `94%`\n",
+        "\n",
+        "### Анализ:\n",
+        "- Метрики на обучающей выборке значительно выше, чем на тестовой и валидационной.\n",
+        "- Это может указывать на лёгкий **переобучение**, так как F1 Score сильно превышает результаты тестовой выборки.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Общий вывод\n",
+        "- Модель показывает хорошую производительность на всех выборках.\n",
+        "- Однако разрыв между метриками на обучающей и тестовой выборках свидетельствует о возможном **переобучении**.\n",
+        "- **Рекомендации:**\n",
+        "  - Применить регуляризацию (например, Dropout или L2-регуляризацию).\n",
+        "  - Проверить дисбаланс классов и применить взвешивание классов, если необходимо.\n",
+        "  - Убедиться, что модель не переобучается, возможно, уменьшив её сложность или добавив больше данных.\n"
+      ],
+      "metadata": {
+        "id": "olFYJgL9Y2Jz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Итог"
+      ],
+      "metadata": {
+        "id": "b-vOvl2jY3uA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Сравнительный анализ классификационных моделей\n",
+        "\n",
+        "## 1. Первая модель: Двунаправленная LSTM\n",
+        "### Результаты:\n",
+        "- **Тестовая выборка:**\n",
+        "  - F1 Score (общая): `0.8149`\n",
+        "  - Negative:\n",
+        "    - Precision: `0.89`\n",
+        "    - Recall: `0.66`\n",
+        "    - F1 Score: `0.76`\n",
+        "  - Positive:\n",
+        "    - Precision: `0.73`\n",
+        "    - Recall: `0.92`\n",
+        "    - F1 Score: `0.81`\n",
+        "  - Accuracy: `79%`\n",
+        "- **Обучающая выборка:**\n",
+        "  - F1 Score (общая): `0.9037`\n",
+        "  - Negative:\n",
+        "    - Precision: `0.98`\n",
+        "    - Recall: `0.81`\n",
+        "    - F1 Score: `0.89`\n",
+        "  - Positive:\n",
+        "    - Precision: `0.84`\n",
+        "    - Recall: `0.98`\n",
+        "    - F1 Score: `0.90`\n",
+        "  - Accuracy: `90%`\n",
+        "\n",
+        "### Анализ:\n",
+        "- **Тестовая производительность**:\n",
+        "  - Высокий recall для класса Positive (92%), но низкий recall для Negative (66%) указывает на перекос в классификации.\n",
+        "  - Precision для Negative выше, чем для Positive, что свидетельствует о большей уверенности в этом классе, но меньшем охвате.\n",
+        "- **Обучающая производительность**:\n",
+        "  - Высокий F1 Score на обучающей выборке (`0.9037`) указывает на возможное переобучение, поскольку разница с тестовой метрикой значительна.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 2. Вторая модель: Полносвязная с предобучением на рекуррентном автокодировщике\n",
+        "### Результаты:\n",
+        "- **Тестовая выборка:**\n",
+        "  - F1 Score (общая): `0.8421`\n",
+        "  - Negative:\n",
+        "    - Precision: `0.83`\n",
+        "    - Recall: `0.87`\n",
+        "    - F1 Score: `0.85`\n",
+        "  - Positive:\n",
+        "    - Precision: `0.86`\n",
+        "    - Recall: `0.82`\n",
+        "    - F1 Score: `0.84`\n",
+        "  - Accuracy: `85%`\n",
+        "- **Валидационная выборка:**\n",
+        "  - F1 Score (общая): `0.8598`\n",
+        "  - Negative:\n",
+        "    - Precision: `0.86`\n",
+        "    - Recall: `0.86`\n",
+        "    - F1 Score: `0.86`\n",
+        "  - Positive:\n",
+        "    - Precision: `0.86`\n",
+        "    - Recall: `0.86`\n",
+        "    - F1 Score: `0.86`\n",
+        "  - Accuracy: `86%`\n",
+        "- **Обучающая выборка:**\n",
+        "  - F1 Score (общая): `0.9376`\n",
+        "  - Negative:\n",
+        "    - Precision: `0.93`\n",
+        "    - Recall: `0.95`\n",
+        "    - F1 Score: `0.94`\n",
+        "  - Positive:\n",
+        "    - Precision: `0.95`\n",
+        "    - Recall: `0.93`\n",
+        "    - F1 Score: `0.94`\n",
+        "  - Accuracy: `94%`\n",
+        "\n",
+        "### Анализ:\n",
+        "- **Тестовая производительность**:\n",
+        "  - Более равномерные метрики для обоих классов (F1 Score: Negative `0.85`, Positive `0.84`).\n",
+        "  - Меньший разрыв между обучающей и тестовой выборками говорит о лучшей обобщающей способности модели.\n",
+        "- **Валидационная производительность**:\n",
+        "  - F1 Score на валидационной выборке (`0.8598`) практически совпадает с тестовой, что подтверждает стабильность модели.\n",
+        "- **Обучающая производительность**:\n",
+        "  - Высокая F1 Score (`0.9376`) говорит о хорошем обучении, но небольшое переобучение всё же присутствует.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Сравнение моделей\n",
+        "\n",
+        "| Модель                         | F1 Score (Тест) | F1 Score (Обучение) | Тестовая Accuracy | Обучающая Accuracy |\n",
+        "|--------------------------------|-----------------|---------------------|-------------------|--------------------|\n",
+        "| Двунаправленная LSTM           | 0.8149          | 0.9037              | 79%               | 90%                |\n",
+        "| Полносвязная с автокодировщиком| 0.8421          | 0.9376              | 85%               | 94%                |\n",
+        "\n",
+        "### Ключевые выводы:\n",
+        "1. **Тестовая производительность**:\n",
+        "   - Полносвязная модель показывает более высокие показатели на тестовой выборке (F1 Score: `0.8421` vs `0.8149`) и лучшую общую точность (`85%` vs `79%`).\n",
+        "   - Двунаправленная LSTM хуже обобщает, особенно для класса Negative (низкий recall).\n",
+        "\n",
+        "2. **Обучение**:\n",
+        "   - Обе модели показывают признаки переобучения, но полносвязная модель демонстрирует меньший разрыв между обучающей и тестовой метриками.\n",
+        "\n",
+        "3. **Обобщение**:\n",
+        "   - Полносвязная модель с предобучением лучше справляется с обобщением и показывает более стабильные метрики между выборками.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Общий вывод\n",
+        "- **Полносвязная модель с предобучением** предпочтительнее, так как она:\n",
+        "  - Имеет более высокую стабильность между обучающей, валидационной и тестовой выборками.\n",
+        "  - Показывает более равномерное поведение для классов.\n",
+        "  - Лучше обобщает знания на новых данных.\n",
+        "- Для улучшения двунаправленной LSTM можно рассмотреть:\n",
+        "  - Увеличение обучающих данных.\n",
+        "  - Использование регуляризации (Dropout, L2-регуляризация).\n",
+        "  - Сбалансирование классов или изменение функции потерь для повышения recall для Negative."
+      ],
+      "metadata": {
+        "id": "-yfJ8TQoY527"
+      }
     }
   ]
 }
